syntax = "proto3";

option java_package = "ca.wise.rpc.proto";
option java_outer_classname = "FileServerProto";
option java_multiple_files = true;

package rpc;

// Server methods for receiving fgm files.
service FileServer {

    // Stream a job file from the client to the server.
    rpc SendFile(stream FileChunk) returns (FileResult) { }
}

// A part of a file.
message FileChunk {
    // The name of the job that the file is for.
    string name = 1;

    // The bytes from the file.
    bytes data = 2;

    // The file format to save the data in.
    OutputType type = 3;

    enum OutputType {
        XML = 0;
        JSON_PRETTY = 1;
        JSON_MINIMAL = 2;
        BINARY = 3;
    }
}

// Return value for streaming a file.
message FileResult {
}
